--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 # Database connection
 DATABASE_DSN=postgres://postgres:postgres@db/medondo
 
+#CORS Frontend
+FRONTEND_DOMAIN=http://localhost:4200
+
 # Only dev env variables
 COMPOSE_PROJECT_NAME=medondo-back
