--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "medondo",
+  "name": "animal-management",
   "version": "0.0.1",
-  "description": "Test task for Medondo",
+  "description": "NestJS example app",
   "author": "Sviatosav Ronskyi",
   "private": true,
   "license": "UNLICENSED",
@@ -28,9 +28,10 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
-    "class-transformer": "0.4.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
