add user module

--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 # Database connection
 DATABASE_DSN=postgres://postgres:postgres@db/medondo
 
-#CORS Frontend
+# CORS Frontend
 FRONTEND_DOMAIN=http://localhost:4200
 
 # Only dev env variables
-COMPOSE_PROJECT_NAME=medondo-back
+COMPOSE_PROJECT_NAME=animal-management
+
+# JWT
+JWT_EXPIRATION=3600
+JWT_SHARED_KEY=secret
